--- a/client/Startling_Cameos_app/src/App.css
+++ b/client/Startling_Cameos_app/src/App.css
@@ -56,6 +56,7 @@ nav{
   flex-direction: column;
   row-gap: 2vw;
   flex: 0 0 50%;
+  margin-top:7vw;
 }
 
 h2{
@@ -182,4 +183,18 @@ button{
 
 #username{
   margin-top: 5vw;
+}
+
+
+#ent-img{
+    width: 20vw;
+    /* margin-left: ; */
+    height: 18vw;
+    margin-left: 0.7vw;
+}
+
+select{
+  margin-top: 2vw;
+  width: 24vw;
+  height: 2vw;
 }
